@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-15T01:59:54Z",
-  "count_outdated" : 279,
-  "uniques_outdated" : 167,
+  "timestamp" : "2022-07-15T08:22:59Z",
+  "count_outdated" : 280,
+  "uniques_outdated" : 168,
   "count" : 282,
   "uniques" : 170,
   "clones" : [
-    {
-      "timestamp": "2022-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 1,
