@@ -1,3 +1,10 @@
+2022-07-15T08:22:59Z:
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 167 279 / 170 282
+* notice: next accum: outdated-unq outdated-all / unq all: 168 280 / 170 282
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-07-01] / []
+
 2022-07-15T01:59:54Z:
 * notice: last 14d: unq all: 3 3
 * notice: prev accum: outdated-unq outdated-all / unq all: 167 279 / 169 281
